[package]
name = 'rio-staking-pool'
version = '0.1.0'
description = 'RIO staking pool.'
authors = ['A <https://b/c>']
edition = '2018'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-benchmarking]
default-features = false
optional = true
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.12"

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.12"

[dependencies.frame-system]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.12"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.12"

[dependencies.pallet-timestamp]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.12"

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dependencies.rio-primitives]
default-features = false
path = "../../riodefi/primitives"

[dependencies.rio-proc-macro]
default-features = false
path = "../../proc-macro"

[dev-dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.12"

[dev-dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.12"

[dev-dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.12"

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-timestamp/std',
    'frame-benchmarking/std',
    'sp-runtime/std',
    'sp-io/std',
    'rio-primitives/std',
]
try-runtime = ['frame-support/try-runtime']
