[package]
name = "rio-primitives"
version = "0.1.0"
authors = ["Rio Defi Team<dev@riodefi.com>"]
edition = "2018"

[dependencies]
#codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false }
#serde = { version = "1.0.101", optional = true, features = ["derive"] }

codec = { package = "parity-scale-codec", version = "2.2.0", features = ["derive"], default-features = false }
serde = { version = "1.0.106", features = ["derive"], optional = true }
scale-info = { version = "1.0", features = ["derive"], default-features = false }

# Substrate primitives
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }

# Substrate pallets
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",
    "scale-info/std",
    "sp-application-crypto/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "frame-system/std",
]
