[package]
name = "rio-assets"
version = "0.1.0"
authors = ["Rio Team<dev@riodefi.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.126", optional = true }
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false }
bitmask = { version = "0.5.0", default-features = false }
scale-info = { version = "1.0", features = ["derive"], default-features = false }

# substrate
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }

# substrate runtime module
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }

# orml
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", rev = "ee37b76a7a8cf159e6c41851942758746318bb84", default-features = false }

# rio runtime module
rio-primitives = { path = "../../primitives", default-features = false }
rio-support = { path = "../support", default-features = false }
rio-protocol = { path = "../protocol", default-features = false }

rio-proc-macro = { path = "../../../proc-macro" }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "bitmask/std",
    "scale-info/std",

    "sp-std/std",
    "sp-io/std",
    "sp-runtime/std",

    "frame-support/std",
    "frame-system/std",

    "orml-traits/std",

    "rio-primitives/std",
    "rio-support/std",
    "rio-protocol/std",
    "pallet-balances/std",
]
