[package]
name = "rio-root"
version = "0.1.0"
authors = ["Rio Team<dev@riodefi.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
codec = { package = "parity-scale-codec", version = "2.2.0", features = ["derive"], default-features = false }
scale-info = { version = "1.0", features = ["derive"], default-features = false }

# substrate
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }

# substrate runtime module
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }

# orml
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", rev = "ee37b76a7a8cf159e6c41851942758746318bb84", default-features = false }

# rio
rio-primitives = { path = "../../primitives", default-features = false }
rio-protocol = { path = "../protocol", default-features = false }
rio-support = { path = "../support", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
rio-payment = { path = "../payment", default-features = false }
rio-assets = { path = "../assets", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-io/std",
    "scale-info/std",

    "sp-std/std",
    "sp-runtime/std",
    # substrate runtime module
    "frame-support/std",
    "frame-system/std",
    "pallet-session/std",

    # orml
    "orml-traits/std",

    # rio
    "rio-primitives/std",
    "rio-protocol/std",
    "rio-support/std",
]
