[package]
name = "rio-support"
version = "0.1.0"
authors = ["Rio Team<dev@riodefi.com>"]
edition = "2018"

[dependencies]
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
rio-primitives = { path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "rio-primitives/std",
]
